--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,9 @@
 		<!--++++++++++++ JDBC +++++++++++ -->
 		<!-- +++++++++++++++++++++++++++++++ -->
 		<jdbc.sqlite>3.34.0</jdbc.sqlite>
+				<mysqlConnector.version>8.0.19</mysqlConnector.version>
+		<jtds.version>1.3.1</jtds.version>
+		<mssqlServer.version>8.3.0.jre14-preview</mssqlServer.version>
 
 		<!-- +++++++++++++++++++++++++++++++ -->
 		<!--++++++++++++ GeoTool +++++++++++++ -->
@@ -263,6 +266,23 @@
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
 			<version>${jdbc.sqlite}</version>
+		</dependency>
+				<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>${mysqlConnector.version}</version>
+		</dependency>
+
+		<!-- MsSql -->
+		<dependency>
+			<groupId>net.sourceforge.jtds</groupId>
+			<artifactId>jtds</artifactId>
+			<version>${jtds.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>${mssqlServer.version}</version>
 		</dependency>
 
 
